[package]
name = "noise_tex"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]

std = []

[dependencies]
nt_lib = { path = "nt_lib" }

[dev-dependencies]
noise = "0.9.0"
image = "0.25.9"
nvtt_rs = { git = "https://github.com/Squalive/nvtt.git", features = ["cuda"] }

[workspace]
members = ["nt_lib"]

[[example]]
name = "generate"
